#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(CppTracer,0.0.0,oliviers.open.source.softwares@gmail.com)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([dist-bzip2])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LIBTOOL
#AC_PROG_RANLIB libtoolize: `AC_PROG_RANLIB' is rendered obsolete by `LT_INIT'
LT_INIT

# Checks for header files.
AC_CHECK_HEADERS([dbgflags-1/dbgflags.h dbgflags-1/loggers.h dbgflags-1/syslogex.h])

# Checks for libraries.
AC_CHECK_LIB([dbgflags],registerDebugFlags)

# debug
AC_ARG_ENABLE(debug,
        [  --enable-debug Enable debug mode (default is no)],
        [case "${enableval}" in
         yes) enable_debug="yes";;
          no) enable_debug="no" ;;
           *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
         esac],
        [enable_debug="no"]
)
if test "$enable_debug" = "yes"; then
        AC_DEFINE(_DEBUG_, 1, [Defined if debug mode is enabled (its easier to check).])
        #CFLAGS="$CFLAGS -O0 -ggdb3"
fi
if test "$enable_debug" = "no"; then
        AC_DEFINE(NDEBUG, 1, [Defined if debug mode is disabled.])
fi

AC_CONFIG_FILES(Makefile                
                libCppTracer/Makefile
                TestProgram/Makefile)
AC_OUTPUT
